# TAFE_Pest_Detection

./: LICENSE  README.md
gap_8/Mobilenetv3_SSDLIte/: Makefile  Mobv3SSDLite.h  README.md  common.mk  main_Mobv3SSDLite.c
gap_8/Mobilenetv3_SSDLIte/BUILD_MODEL/: Expression_Kernels.c  Expression_Kernels.h  Mobv3SSDLiteKernels.c  Mobv3SSDLiteKernels.h  modelInfos.h
gap_8/Mobilenetv3_SSDLIte/common/: model_rules.mk
gap_8/Viola_Jones/: LICENSE  Makefile  README.md  cascade.c  cascade.h  cluster.c  cluster.h  haar.c  haar.h  image.c  image.h  pulp.c
gap_9/Mobilenetv3_SSDLIte_cluster/: CMakeLists.txt  Expression_Kernels.c  Expression_Kernels.h  Mobv3SSDLite.c  Mobv3SSDLite.h  README.md  model.c  sdk.config
gap_9/Mobilenetv3_SSDLIte_cluster/tensors/: Constant_model_backbone_features_0_11_block_2_fc1_bias.tensor  Constant_model_backbone_features_0_11_block_2_fc2_bias.tensor  Constant_model_backbone_features_0_12_block_2_fc1_bias.tensor  Constant_model_backbone_features_0_12_block_2_fc2_bias.tensor  Constant_model_backbone_features_0_4_block_2_fc1_bias.tensor  Constant_model_backbone_features_0_4_block_2_fc2_bias.tensor  Constant_model_backbone_features_0_5_block_2_fc1_bias.tensor  Constant_model_backbone_features_0_5_block_2_fc2_bias.tensor  Constant_model_backbone_features_0_6_block_2_fc1_bias.tensor  Constant_model_backbone_features_0_6_block_2_fc2_bias.tensor  Constant_model_backbone_features_1_0_2_fc1_bias.tensor  Constant_model_backbone_features_1_0_2_fc2_bias.tensor  Constant_model_backbone_features_1_1_block_2_fc1_bias.tensor  Constant_model_backbone_features_1_1_block_2_fc2_bias.tensor  Constant_model_backbone_features_1_2_block_2_fc1_bias.tensor  Constant_model_backbone_features_1_2_block_2_fc2_bias.tensor  Constant_model_head_classification_head_module_list_0_1_bias.tensor  Constant_model_head_classification_head_module_list_0_1_bias_1.tensor  Constant_model_head_classification_head_module_list_0_1_bias_2.tensor  Constant_model_head_classification_head_module_list_0_1_bias_3.tensor  Constant_model_head_classification_head_module_list_0_1_bias_4.tensor  Constant_model_head_classification_head_module_list_0_1_bias_5.tensor  Constant_model_head_regression_head_module_list_0_1_bias.tensor  Constant_model_head_regression_head_module_list_0_1_bias_1.tensor  Constant_model_head_regression_head_module_list_0_1_bias_2.tensor  Constant_model_head_regression_head_module_list_0_1_bias_3.tensor  Constant_model_head_regression_head_module_list_0_1_bias_4.tensor  Constant_model_head_regression_head_module_list_0_1_bias_5.tensor  Constant_onnx__conv_1387.tensor  Constant_onnx__conv_1390.tensor  Constant_onnx__conv_1393.tensor  Constant_onnx__conv_1396.tensor  Constant_onnx__conv_1399.tensor  Constant_onnx__conv_1402.tensor  Constant_onnx__conv_1405.tensor  Constant_onnx__conv_1408.tensor  Constant_onnx__conv_1411.tensor  Constant_onnx__conv_1414.tensor  Constant_onnx__conv_1417.tensor  Constant_onnx__conv_1420.tensor  (+350 more)
gap_9/Mobilenetv3_SSDLIte_ne16/: CMakeLists.txt  Expression_Kernels.c  Expression_Kernels.h  Mobv3SSDLite.c  README.md  model.c  modelInfos.h  run_make.sh  sdk.config  ssd_mobv2_quant.c  ssd_mobv2_quant.h
gap_9/Mobilenetv3_SSDLIte_ne16/tensors/: Anchors.tensor  Boxpredictor_0_boxencodingpred_696b62c5_0.tensor  Boxpredictor_0_boxencodingpred_b48ea6a4_0.tensor  (+817 more)
gap_9/Viola_Jones/: CMakeLists.txt  LICENSE  README.md  cascade.c  cascade.h  check.h  cluster.c  cluster.h  haar.c  haar.h  image.c  image.h  pulp.c
